fixed english misspellings and cleared output of each notebook

--- a/notebooks/basic_concepts_aggregation_operators.ipynb
+++ b/notebooks/basic_concepts_aggregation_operators.ipynb
@@ -11,21 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import shfl\n",
@@ -86,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once we have loaded and federated the data and established the learning model, it only remains to establish the aggregation operator. At the moment, the framework provides two aggregation mechanism: FedAvg and WeightedFedAvg. The implementation of the federated aggregation operators are as follows."
+    "Once we have loaded, federated the data and established the learning model, it only remains to establish the aggregation operator. At the moment, the framework provides two aggregation mechanism: FedAvg and WeightedFedAvg. The implementation of the federated aggregation operators are as follows."
    ]
   },
   {
@@ -107,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -120,9 +112,9 @@
     "from shfl.federated_aggregator.federated_aggregator import FederatedAggregator\n",
     "\n",
     "\n",
-    "class AvgFedAggregator(FederatedAggregator):\n",
+    "class FedAvgAggregator(FederatedAggregator):\n",
     "    \"\"\"\n",
-    "    Implementation of Average Federated Aggregator. It only uses a simple average of the parameters of all the models\n",
+    "    Implementation of Federated Averaging Aggregator. It only uses a simple average of the parameters of all the models\n",
     "    \"\"\"\n",
     "\n",
     "    def aggregate_weights(self, clients_params):\n",
@@ -137,7 +129,7 @@
     "        return aggregated_weights\n",
     "\n",
     "\n",
-    "fedavg_aggregator = AvgFedAggregator()"
+    "fedavg_aggregator = FedAvgAggregator()"
    ]
   },
   {
@@ -157,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -170,9 +162,9 @@
     "from shfl.federated_aggregator.federated_aggregator import FederatedAggregator\n",
     "\n",
     "\n",
-    "class WeightedAvgFedAggregator(FederatedAggregator):\n",
+    "class WeightedFedAvgAggregator(FederatedAggregator):\n",
     "    \"\"\"\n",
-    "    Implementation of Average Federated Aggregator. The aggregation of the parameters is based in the number of data \\\n",
+    "    Implementation of Weighted Federated Averaging Aggregator. The aggregation of the parameters is based in the number of data \\\n",
     "    in every node.\n",
     "    \"\"\"\n",
     "\n",
@@ -188,19 +180,19 @@
     "\n",
     "        return aggregated_weights\n",
     "    \n",
-    "weighted_fedavg_aggregator = WeightedAvgFedAggregator()"
+    "weighted_fedavg_aggregator = WeightedFedAvgAggregator()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we are ready to establish de federated goverment with any of the implemented aggregation operators and start the federated learning process."
+    "Finally, we are ready to establish the federated goverment with any of the implemented aggregation operators and start the federated learning process."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,41 +201,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy round 0\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x117596e90>: [5.310560375308991, 0.6539000272750854]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2caab550>: [4.772594417381287, 0.6820250153541565]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2caab6d0>: [4.493043189811707, 0.6985750198364258]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2caab890>: [4.651841709518433, 0.6874499917030334]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2caaba50>: [4.808404593467713, 0.6800749897956848]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2caabd10>: [3.9967662153720855, 0.7358250021934509]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2caabe10>: [5.738841980648041, 0.6251500248908997]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2cabb050>: [6.602431640625, 0.5516250133514404]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2cabb1d0>: [4.06071819601059, 0.7279250025749207]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2cabb3d0>: [5.101232486057281, 0.663100004196167]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2cabb510>: [5.2010588116645815, 0.6607249975204468]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2cabb6d0>: [4.6816134460449215, 0.6840500235557556]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2cabb890>: [7.551041991043091, 0.5055500268936157]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2cabba50>: [5.055827945232392, 0.6679250001907349]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2cabbc10>: [4.042423392939567, 0.7265999913215637]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2cabbdd0>: [4.29935334982872, 0.7081249952316284]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2cabbf90>: [4.5230098672866825, 0.699999988079071]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2cabf190>: [5.195849438762664, 0.6523000001907349]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2cabf350>: [6.962764186477661, 0.5532000064849854]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x1a2cabf510>: [4.30692459807396, 0.7093499898910522]\n",
-      "Global model test performance : [3.9250435561180113, 0.7217249870300293]\n",
-      "\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "federated_government.run_rounds(1, test_data, test_labels)"
    ]
@@ -265,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   },
   "pycharm": {
    "stem_cell": {
