AvgFed to FedAvg

--- a/notebooks/binary_average_attack.ipynb
+++ b/notebooks/binary_average_attack.ipynb
@@ -120,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From now on, all the external queries are done over the permanent randimized data, while the raw data remains completely hidden."
+    "From now on, all the external queries are done over the permanent randomized data, while the raw data remains completely hidden."
    ]
   },
   {
@@ -161,6 +161,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.7"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
