--- a/notebooks/basic_concepts_random_seed.ipynb
+++ b/notebooks/basic_concepts_random_seed.ipynb
@@ -259,7 +259,7 @@
    },
    "outputs": [],
    "source": [
-    "aggregator = shfl.federated_aggregator.AvgFedAggregator()\n",
+    "aggregator = shfl.federated_aggregator.FedAvgAggregator()\n",
     "federated_government = shfl.learning_approach.FederatedGovernment(model_builder, federated_data, aggregator)"
    ]
   },
@@ -456,10 +456,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
