--- a/notebooks/federated_learning_regression.ipynb
+++ b/notebooks/federated_learning_regression.ipynb
@@ -103,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aggregator = shfl.federated_aggregator.AvgFedAggregator()\n",
+    "aggregator = shfl.federated_aggregator.FedAvgAggregator()\n",
     "federated_government = shfl.learning_approach.FederatedGovernment(model_builder, federated_data, aggregator)"
    ]
   },
@@ -165,6 +165,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.7"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
