--- a/notebooks/federated_learning_regression_simple.ipynb
+++ b/notebooks/federated_learning_regression_simple.ipynb
@@ -178,7 +178,7 @@
     "print(federated_data.num_nodes())\n",
     "\n",
     "# Run the algorithm:\n",
-    "aggregator = shfl.federated_aggregator.AvgFedAggregator()\n",
+    "aggregator = shfl.federated_aggregator.FedAvgAggregator()\n",
     "federated_government = shfl.learning_approach.FederatedGovernment(LinearRegression2D, federated_data, aggregator)\n",
     "\n",
     "federated_government.run_rounds(n = 1, test_data = test_data, test_label = test_label)"
@@ -300,6 +300,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.7"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
