--- a/notebooks/evaluation_methodology.ipynb
+++ b/notebooks/evaluation_methodology.ipynb
@@ -76,7 +76,7 @@
     "federated_data, test_data, test_labels = non_iid_distribution.get_federated_data(num_nodes=5, percent=10)\n",
     "\n",
     "#Set up aggregation operator\n",
-    "aggregator = shfl.federated_aggregator.FedAAvgggregator()\n",
+    "aggregator = shfl.federated_aggregator.FedAvgAggregator()\n",
     "federated_government = shfl.learning_approach.FederatedGovernment(model_builder, federated_data, aggregator)\n",
     "\n",
     "#Reshape and normalize\n",
@@ -196,15 +196,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
