Correction Python notation in Average Aggregator

--- a/notebooks/basic_concepts_aggregation_operators.ipynb
+++ b/notebooks/basic_concepts_aggregation_operators.ipynb
@@ -97,9 +97,9 @@
     "\n",
     "In this section, we detail the implementation of `FedAvg` (see [FedAVg](../shfl/federated_aggregator/avgfed_aggregator.py)) proposed  by Google in this [paper](https://arxiv.org/abs/1602.05629). \n",
     "\n",
-    "It is based on the arithmetic mean of the local parameters $W_i$ trained in each of the $N$ local clients $C_i$. That is, the parameters $W$ of the global model after each round of training are\n",
+    "It is based on the arithmetic mean of the local parameters $W_i$ trained in each of the local clients $C_i$. That is, the parameters $W$ of the global model after each round of training are\n",
     "\n",
-    "$$W = \\frac{1}{N} \\sum_{i=1}^N W_i$$\n",
+    "$$W = \\frac{1}{n_{\\rm{clients}}} \\sum_{i=1}^{n_{\\rm{clients}}} W_i$$\n",
     "\n",
     "\n",
     "For its implementation, we create a class that implements [FederatedAggregator](../shfl/federated_aggregator/federated_aggregator.py) interface. The method `aggregate_weights` is overwritten calculating the mean of the local weights of each client."
