Removed outputs of cells in notebooks

--- a/notebooks/basic_concepts_aggregation_operators.ipynb
+++ b/notebooks/basic_concepts_aggregation_operators.ipynb
@@ -11,21 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import shfl\n",
@@ -99,7 +91,7 @@
     "\n",
     "It is based on the arithmetic mean of the local parameters $W_i$ trained in each of the local clients $C_i$. That is, the parameters $W$ of the global model after each round of training are\n",
     "\n",
-    "$$W = \\frac{1}{n_{\\rm{clients}}} \\sum_{i=1}^{n_{\\rm{clients}}} W_i$$\n",
+    "$$W = \\frac{1}{n_{\\rm{C}}} \\sum_{i=1}^{n_{\\rm{C}}} W_i$$\n",
     "\n",
     "\n",
     "For its implementation, we create a class that implements [FederatedAggregator](../shfl/federated_aggregator/federated_aggregator.py) interface. The method `aggregate_weights` is overwritten calculating the mean of the local weights of each client."
@@ -107,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -157,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -201,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,41 +202,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy round 0\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe869a92b70>: [30.299690192604064, 0.6868249773979187]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe898f0c7b8>: [34.14406263712719, 0.6653249859809875]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f56b6d8>: [41.63892764587403, 0.6065000295639038]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f56b7b8>: [41.88450068397522, 0.634024977684021]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f56b898>: [29.57330637178421, 0.7254999876022339]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f56b978>: [30.292716087722777, 0.6719250082969666]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f56ba58>: [31.731726102256776, 0.6801999807357788]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f56bb38>: [25.576269654619693, 0.7384250164031982]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f56bc18>: [17.73031958231926, 0.7770749926567078]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f56bcf8>: [29.556070857334138, 0.6891000270843506]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f56bdd8>: [32.1354886302948, 0.7148749828338623]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f56beb8>: [17.322249989164806, 0.7730249762535095]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f56bf98>: [38.98305648574829, 0.6497499942779541]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f57f0b8>: [47.1962620677948, 0.5797500014305115]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f57f198>: [34.79242058103085, 0.7322499752044678]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f57f278>: [19.67006440038681, 0.7821999788284302]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f57f358>: [24.657535381126404, 0.7554000020027161]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f57f438>: [28.35395282049179, 0.7408499717712402]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f57f518>: [17.66996148004532, 0.7851250171661377]\n",
-      "Test performance client <shfl.private.federated_operation.FederatedDataNode object at 0x7fe80f57f5f8>: [20.42641623047851, 0.7684749960899353]\n",
-      "Global model test performance : [12.024137003624439, 0.7841749787330627]\n",
-      "\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "federated_government.run_rounds(1, test_data, test_labels)"
    ]
