--- a/notebooks/differential_privacy_binary_average_attack.ipynb
+++ b/notebooks/differential_privacy_binary_average_attack.ipynb
@@ -23,21 +23,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from shfl.private.node import DataNode\n",
-    "from shfl.private.node import ExceededPrivacyBudgetError\n",
     "from shfl.differential_privacy.dp_mechanism import RandomizedResponseBinary\n",
     "from math import log, exp\n",
     "\n",
     "n = 1 #the node is guilty\n",
     "\n",
-    "global_epsilon_delta = epsilon_delta=(70, 0)\n",
-    "\n",
-    "node_single = DataNode(global_epsilon_delta)\n",
+    "node_single = DataNode()\n",
     "node_single.set_private_data(name=\"guilty\", data=np.array([n]))\n",
     "data_access_definition = RandomizedResponseBinary(f0=0.8, f1=0.8, epsilon=log(4) + 1e-10)\n",
     "node_single.configure_data_access(\"guilty\", data_access_definition)"
@@ -52,9 +57,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The result of one query is: 1\n"
+     ]
+    }
+   ],
    "source": [
     "result = node_single.query(private_property=\"guilty\")\n",
     "print(\"The result of one query is: \" + str(int(result)))"
@@ -69,18 +82,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.822\n"
+     ]
+    }
+   ],
    "source": [
-    "N = 50\n",
+    "N = 500\n",
     "result_query = []\n",
     "for i in range(N):\n",
-    "    try:\n",
-    "        result_query.append(node_single.query(private_property=\"guilty\"))\n",
-    "    except ExceededPrivacyBudgetError:\n",
-    "        print(\"The privacy budget has been spent at run {}\".format(i+1))\n",
-    "        break\n",
+    "    result_query.append(node_single.query(private_property=\"guilty\"))\n",
     "result_query = np.array(result_query)\n",
     "print(np.mean(result_query))"
    ]
@@ -103,11 +120,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The PRR is: 1\n"
+     ]
+    }
+   ],
    "source": [
-    "node_single_prr = DataNode(global_epsilon_delta)\n",
+    "node_single_prr = DataNode()\n",
     "data_binary = np.array([1])  #the node is guilty\n",
     "node_single_prr.set_private_data(name=\"guilty\", data=np.array([n]))\n",
     "node_single_prr.configure_data_access(\"guilty\", data_access_definition)\n",
@@ -128,18 +153,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.84\n"
+     ]
+    }
+   ],
    "source": [
-    "N = 50\n",
+    "N = 500\n",
     "result_query = []\n",
     "for i in range(N):\n",
-    "    try:\n",
-    "        result_query.append(node_single_prr.query(private_property=\"guilty\")[1])\n",
-    "    except ExceededPrivacyBudgetError:\n",
-    "        print(\"The privacy budget has been spent at run {}\".format(i+1))\n",
-    "        break\n",
+    "    result_query.append(node_single_prr.query(private_property=\"guilty\")[1])\n",
     "result_query = np.array(result_query)\n",
     "print(np.mean(result_query))"
    ]
@@ -150,6 +179,60 @@
    "source": [
     "The result is not always close to 0.8, since the permanent response might be 0. The average attack may, at best, identify the permanent randomized response, but not the raw data."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adaptive Differential Privacy\n",
+    "\n",
+    "Adaptive Differential Privacy is a different approach to manage multiple queries against same data. The basic idea consists in register all the interactions until a global epsilon is spent."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The privacy budget has been spent at run 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "from shfl.differential_privacy.composition_dp import AdaptiveDifferentialPrivacy\n",
+    "from shfl.differential_privacy.composition_dp import ExceededPrivacyBudgetError\n",
+    "\n",
+    "global_epsilon_delta = (7, 0)\n",
+    "\n",
+    "node_single = DataNode()\n",
+    "node_single.set_private_data(name=\"guilty\", data=np.array([n]))\n",
+    "\n",
+    "data_access_definition = AdaptiveDifferentialPrivacy(global_epsilon_delta)\n",
+    "\n",
+    "differentially_private_mechanism = RandomizedResponseBinary(f0=0.8, f1=0.8, epsilon=log(4) + 1e-10)\n",
+    "node_single.configure_data_access(\"guilty\", data_access_definition)\n",
+    "\n",
+    "N = 500\n",
+    "result_query = []\n",
+    "for i in range(N):\n",
+    "    try:\n",
+    "        result_query.append(node_single.query(private_property=\"guilty\", \n",
+    "                                              differentially_private_mechanism=differentially_private_mechanism))\n",
+    "    except ExceededPrivacyBudgetError:\n",
+    "        print(\"The privacy budget has been spent at run {}\".format(i+1))\n",
+    "        break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -168,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   },
   "pycharm": {
    "stem_cell": {
