remove outputs from current notebooks

--- a/notebooks/differential_privacy_binary_average_attack.ipynb
+++ b/notebooks/differential_privacy_binary_average_attack.ipynb
@@ -23,17 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from shfl.private.node import DataNode\n",
@@ -57,17 +49,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The result of one query is: 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "result = node_single.query(private_property=\"guilty\")\n",
     "print(\"The result of one query is: \" + str(int(result)))"
@@ -82,17 +66,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.822\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "N = 500\n",
     "result_query = []\n",
@@ -120,17 +96,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The PRR is: 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "node_single_prr = DataNode()\n",
     "data_binary = np.array([1])  #the node is guilty\n",
@@ -153,23 +121,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.84\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "N = 500\n",
-    "result_query = []\n",
+    "result_query = np.empty(shape=(N,))\n",
     "for i in range(N):\n",
-    "    result_query.append(node_single_prr.query(private_property=\"guilty\")[1])\n",
-    "result_query = np.array(result_query)\n",
+    "    result_query[i] = node_single_prr.query(private_property=\"guilty\")[1]\n",
     "print(np.mean(result_query))"
    ]
   },
@@ -191,17 +150,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The privacy budget has been spent at run 6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from shfl.differential_privacy.composition_dp import AdaptiveDifferentialPrivacy\n",
     "from shfl.differential_privacy.composition_dp import ExceededPrivacyBudgetError\n",
@@ -226,13 +177,6 @@
     "        print(\"The privacy budget has been spent at run {}\".format(i+1))\n",
     "        break\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -251,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.7"
   },
   "pycharm": {
    "stem_cell": {
