--- a/notebooks/differential_privacy_laplace.ipynb
+++ b/notebooks/differential_privacy_laplace.ipynb
@@ -64,15 +64,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import matplotlib.pyplot as plt\n",
     "from scipy.stats import norm\n",
     "\n",
     "mu_M = 178\n",
@@ -192,13 +184,12 @@
    "source": [
     "from shfl.differential_privacy import LaplaceMechanism\n",
     "from shfl.private.federated_operation import federate_array\n",
-    "from shfl.private.node import ExceededPrivacyBudgetError\n",
     "\n",
     "def experiment(sensitivity, epsilon):\n",
     "    true_heights = np.random.normal(170, 1, 500)\n",
     "    true_mean = np.mean(true_heights)\n",
     "    \n",
-    "    federated_array = federate_array(true_heights, len(true_heights), epsilon_delta=(3, 0))\n",
+    "    federated_array = federate_array(true_heights, len(true_heights))\n",
     "    \n",
     "    # Define allowed access to data. \n",
     "    data_access_definition = LaplaceMechanism(sensitivity, epsilon)\n",
