--- a/notebooks/differential_privacy_exponential.ipynb
+++ b/notebooks/differential_privacy_exponential.ipynb
@@ -220,7 +220,7 @@
     "from shfl.differential_privacy.dp_mechanism import ExponentialMechanism\n",
     "from shfl.private.node import DataNode\n",
     "\n",
-    "node = DataNode(epsilon_delta=(5, 0))    # Create a node\n",
+    "node = DataNode()    # Create a node\n",
     "node.set_private_data(name=\"bids\", data=np.array(x)) # Store the database x in the node\n",
     "delta_u = r.max()    # In this specific case, Delta u = max(r)\n",
     "epsilon = 5          # Set a value for epsilon\n",
@@ -274,7 +274,7 @@
     "\n",
     "for i in range(len(epsilon_range)):\n",
     "    epsilon = epsilon_range[i]\n",
-    "    node = DataNode(epsilon_delta=(epsilon, 0))\n",
+    "    node = DataNode()\n",
     "    node.set_private_data(name=\"bids\", data=np.array(x))\n",
     "    data_access_definition = ExponentialMechanism(u, r, delta_u, epsilon, size)\n",
     "    node.configure_data_access(\"bids\", data_access_definition)\n",
@@ -341,7 +341,7 @@
     "\n",
     "for i in range(len(epsilon_range)):\n",
     "    epsilon = epsilon_range[i]\n",
-    "    node = DataNode(epsilon_delta=(epsilon, 0))               # Create a node\n",
+    "    node = DataNode()               # Create a node\n",
     "    node.set_private_data(name=\"identity\", data=np.array(x))  # Store the database x in the node\n",
     "    data_access_definition = ExponentialMechanism(u_randomized, r, delta_u, epsilon, size)\n",
     "    node.configure_data_access(\"identity\", data_access_definition)\n",
@@ -402,7 +402,7 @@
     "epsilon = 1                   # Set a value for epsilon\n",
     "size = 100000                 # We want to repeat the query this many times\n",
     "\n",
-    "node = DataNode(epsilon_delta=(epsilon, 0))             # Create a node\n",
+    "node = DataNode()             # Create a node\n",
     "node.set_private_data(name=\"identity\", data=np.array(x)) # Store the database x in the node\n",
     "\n",
     "data_access_definition = ExponentialMechanism(u_laplacian, r, delta_u, epsilon, size)\n",
@@ -422,13 +422,6 @@
     "\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
