--- a/notebooks/federated_models_matrix_factorization.ipynb
+++ b/notebooks/federated_models_matrix_factorization.ipynb
@@ -638,9 +638,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Sherpa_venvPy3",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "sherpa_venvpy3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -652,7 +652,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
