Removing validation test from database

--- a/notebooks/basic_concepts_pretrained_model.ipynb
+++ b/notebooks/basic_concepts_pretrained_model.ipynb
@@ -18,7 +18,7 @@
     "import shfl\n",
     "\n",
     "database = shfl.data_base.Emnist()\n",
-    "train_data, train_labels, val_data, val_labels, test_data, test_labels = database.load_data()"
+    "train_data, train_labels, test_data, test_labels = database.load_data()"
    ]
   },
   {
@@ -35,7 +35,6 @@
    "outputs": [],
    "source": [
     "print(len(train_data))\n",
-    "print(len(val_data))\n",
     "print(len(test_data))\n",
     "print(type(train_data[0]))\n",
     "train_data[0].shape"
@@ -206,6 +205,13 @@
     "test_data = test_data.astype(np.float32)\n",
     "federated_government.run_rounds(2, test_data, test_label)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
