--- a/notebooks/federated_attack_simulation_poisoning_data.ipynb
+++ b/notebooks/federated_attack_simulation_poisoning_data.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "\n",
     "database = Emnist()\n",
-    "train_data, train_labels, val_data, val_labels, test_data, test_labels = database.load_data()"
+    "train_data, train_labels, test_data, test_labels = database.load_data()"
    ]
   },
   {
@@ -201,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   },
   "pycharm": {
    "stem_cell": {
