--- a/notebooks/federated_models_k_means_clustering.ipynb
+++ b/notebooks/federated_models_k_means_clustering.ipynb
@@ -80,9 +80,8 @@
     "# Assign database:    \n",
     "database = ClusteringDB()\n",
     "\n",
-    "train_data, train_labels, val_data, val_labels, test_data, test_labels = database.load_data()\n",
+    "train_data, train_labels, test_data, test_labels = database.load_data()\n",
     "print(train_data.shape)\n",
-    "print(val_data.shape)\n",
     "print(test_data.shape)\n",
     "\n",
     "# Visualize train data: \n",
@@ -296,6 +295,13 @@
     "print(\"Centralized model test performance : \" + str(model_centralized.evaluate(data=test_data, labels=test_labels)))\n",
     "plot_k_means(model_centralized, test_data, title = \"Benchmark on Test data: K-means using CENTRALIZED data\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -314,7 +320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
