--- a/notebooks/federated_models_regression_linear.ipynb
+++ b/notebooks/federated_models_regression_linear.ipynb
@@ -33,36 +33,24 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import shfl\n",
-    "from shfl.data_base import data_base as db\n",
+    "from shfl.data_base.data_base import LabeledDatabase\n",
     "\n",
-    "# Create database: \n",
-    "class LinearRegressionDB(db.DataBase):\n",
+    "def generate_data():\n",
+    "    size_data = 100\n",
+    "    beta0 = 10\n",
+    "    beta1 = 2\n",
+    "    scale = 10\n",
+    "\n",
+    "    data = np.random.randint(low = 0, high=100, size=size_data, dtype='l')\n",
+    "    labels = beta0 + beta1*data + np.random.normal(loc=0.0, scale=scale, size=len(data))\n",
     "    \n",
-    "    def __init__(self):\n",
-    "        self._beta0 = 10    # True linear coefficients\n",
-    "        self._beta1 = 2     # True linear coefficients\n",
-    "        self._scale = 10    # Noise added to the true linear regression\n",
-    "        self._size_train = 80\n",
-    "        self._size_test = 20\n",
-    "        self._size_validation = 20\n",
-    "        \n",
-    "    def _create_data(self, size_data):\n",
-    "        data = np.random.randint(low = 0, high=100, size=size_data, dtype='l')\n",
-    "        labels = self._beta0 + self._beta1*data + np.random.normal(loc=0.0, scale=self._scale, size=len(data))\n",
-    "        \n",
-    "        return(data, labels) \n",
-    "       \n",
-    "    def load_data(self):\n",
-    "        self._train_data, self._train_labels = self._create_data(self._size_train)\n",
-    "        self._test_data, self._test_labels = self._create_data(self._size_test)\n",
-    "        self._validation_data, self._validation_labels = self._create_data(self._size_validation)\n",
-    "        \n",
-    "        return self.data\n",
+    "    return data, labels\n",
     "\n",
-    "database = LinearRegressionDB()\n",
-    "train_data, train_labels, val_data, val_labels, test_data, test_labels = database.load_data()\n",
+    "# Create database:\n",
+    "data, labels = generate_data()\n",
+    "database = LabeledDatabase(data, labels)\n",
+    "train_data, train_labels, test_data, test_labels = database.load_data()\n",
     "print(len(train_data))\n",
-    "print(len(val_data))\n",
     "print(len(test_data))"
    ]
   },
@@ -182,7 +170,7 @@
     "print(federated_data.num_nodes())\n",
     "\n",
     "# Run the algorithm:\n",
-    "aggregator = shfl.federated_aggregator.AvgFedAggregator()\n",
+    "aggregator = shfl.federated_aggregator.FedAvgAggregator()\n",
     "federated_government = shfl.learning_approach.FederatedGovernment(LinearRegression2D, federated_data, aggregator)\n",
     "\n",
     "federated_government.run_rounds(n = 1, test_data = test_data, test_label = test_label)"
@@ -229,8 +217,9 @@
     "        return self._sample_data[row_indices, :]\n",
     "    \n",
     "# Generate new data for sampling: \n",
-    "database_sample = LinearRegressionDB()\n",
-    "_, _, data_sample, labels_sample, _, _ = database.load_data()\n",
+    "data, labels = generate_data()\n",
+    "database = LabeledDatabase(data, labels)\n",
+    "data_sample, labels_sample, _, _ = database.load_data()\n",
     "sample_data = np.zeros((len(data_sample), 2))\n",
     "sample_data[:,0] = data_sample\n",
     "sample_data[:,1] = labels_sample"
@@ -311,7 +300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
