--- a/notebooks/basic_concepts.ipynb
+++ b/notebooks/basic_concepts.ipynb
@@ -23,7 +23,7 @@
     "import shfl\n",
     "\n",
     "database = shfl.data_base.Emnist()\n",
-    "train_data, train_labels, val_data, val_labels, test_data, test_labels = database.load_data()"
+    "train_data, train_labels, test_data, test_labels = database.load_data()"
    ]
   },
   {
@@ -44,7 +44,6 @@
    "outputs": [],
    "source": [
     "print(len(train_data))\n",
-    "print(len(val_data))\n",
     "print(len(test_data))\n",
     "print(type(train_data[0]))\n",
     "train_data[0].shape"
@@ -261,13 +260,20 @@
     "test_data = np.reshape(test_data, (test_data.shape[0], test_data.shape[1], test_data.shape[2],1))\n",
     "federated_government.run_rounds(3, test_data, test_labels)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Sherpa_venvPy3",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "sherpa_venvpy3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -279,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   },
   "pycharm": {
    "stem_cell": {
