--- a/notebooks/basic_concepts_aggregation_operators.ipynb
+++ b/notebooks/basic_concepts_aggregation_operators.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "\n",
     "database = shfl.data_base.Emnist()\n",
-    "train_data, train_labels, val_data, val_labels, test_data, test_labels = database.load_data()\n",
+    "train_data, train_labels, test_data, test_labels = database.load_data()\n",
     "\n",
     "iid_distribution = shfl.data_distribution.IidDataDistribution(database)\n",
     "federated_data, test_data, test_labels = iid_distribution.get_federated_data(num_nodes=20, percent=10)\n",
@@ -207,13 +207,20 @@
    "source": [
     "federated_government.run_rounds(1, test_data, test_labels)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Sherpa_venvPy3",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "sherpa_venvpy3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -225,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   },
   "pycharm": {
    "stem_cell": {
