--- a/notebooks/federated_models_regression_deeplearning.ipynb
+++ b/notebooks/federated_models_regression_deeplearning.ipynb
@@ -22,7 +22,7 @@
     "from shfl.data_base.california_housing import CaliforniaHousing\n",
     "\n",
     "database = CaliforniaHousing()\n",
-    "train_data, train_labels, val_data, val_labels, test_data, test_labels = database.load_data()"
+    "train_data, train_labels, test_data, test_labels = database.load_data()"
    ]
   },
   {
@@ -103,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aggregator = shfl.federated_aggregator.AvgFedAggregator()\n",
+    "aggregator = shfl.federated_aggregator.FedAvgAggregator()\n",
     "federated_government = shfl.learning_approach.FederatedGovernment(model_builder, federated_data, aggregator)"
    ]
   },
@@ -171,7 +171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
