Using deepcopy to avoid model sharing

--- a/notebooks/basic_concepts_pretrained_model.ipynb
+++ b/notebooks/basic_concepts_pretrained_model.ipynb
@@ -139,7 +139,7 @@
    "outputs": [],
    "source": [
     "def model_builder():\n",
-    "    return shfl.model.DeepLearningModel(model=model, initialized=True)"
+    "    return shfl.model.DeepLearningModel(model=model)"
    ]
   },
   {
