Using clone method from model to deepcopy

--- a/notebooks/basic_concepts.ipynb
+++ b/notebooks/basic_concepts.ipynb
@@ -136,21 +136,21 @@
    },
    "outputs": [],
    "source": [
-    "import keras\n",
+    "import tensorflow as tf\n",
     "\n",
     "def model_builder():\n",
-    "    model = keras.models.Sequential()\n",
-    "    model.add(keras.layers.Conv2D(32, kernel_size=(3, 3), padding='same', activation='relu', strides=1, input_shape=(28, 28, 1)))\n",
-    "    model.add(keras.layers.MaxPooling2D(pool_size=2, strides=2, padding='valid'))\n",
-    "    model.add(keras.layers.Dropout(0.4))\n",
-    "    model.add(keras.layers.Conv2D(32, kernel_size=(3, 3), padding='same', activation='relu', strides=1))\n",
-    "    model.add(keras.layers.MaxPooling2D(pool_size=2, strides=2, padding='valid'))\n",
-    "    model.add(keras.layers.Dropout(0.3))\n",
-    "    model.add(keras.layers.Flatten())\n",
-    "    model.add(keras.layers.Dense(128, activation='relu'))\n",
-    "    model.add(keras.layers.Dropout(0.1))\n",
-    "    model.add(keras.layers.Dense(64, activation='relu'))\n",
-    "    model.add(keras.layers.Dense(10, activation='softmax'))\n",
+    "    model = tf.keras.models.Sequential()\n",
+    "    model.add(tf.keras.layers.Conv2D(32, kernel_size=(3, 3), padding='same', activation='relu', strides=1, input_shape=(28, 28, 1)))\n",
+    "    model.add(tf.keras.layers.MaxPooling2D(pool_size=2, strides=2, padding='valid'))\n",
+    "    model.add(tf.keras.layers.Dropout(0.4))\n",
+    "    model.add(tf.keras.layers.Conv2D(32, kernel_size=(3, 3), padding='same', activation='relu', strides=1))\n",
+    "    model.add(tf.keras.layers.MaxPooling2D(pool_size=2, strides=2, padding='valid'))\n",
+    "    model.add(tf.keras.layers.Dropout(0.3))\n",
+    "    model.add(tf.keras.layers.Flatten())\n",
+    "    model.add(tf.keras.layers.Dense(128, activation='relu'))\n",
+    "    model.add(tf.keras.layers.Dropout(0.1))\n",
+    "    model.add(tf.keras.layers.Dense(64, activation='relu'))\n",
+    "    model.add(tf.keras.layers.Dense(10, activation='softmax'))\n",
     "\n",
     "    model.compile(optimizer=\"rmsprop\", loss=\"categorical_crossentropy\", metrics=[\"accuracy\"])\n",
     "    \n",
