--- a/notebooks/evaluation_methodology.ipynb
+++ b/notebooks/evaluation_methodology.ipynb
@@ -20,7 +20,7 @@
    "outputs": [],
    "source": [
     "import shfl\n",
-    "import keras\n",
+    "import tensorflow as tf\n",
     "import numpy as np\n",
     "import random\n",
     "\n",
@@ -42,18 +42,18 @@
     "        labeled_data.data = (labeled_data.data - self.__mean)/self.__std\n",
     "        \n",
     "def model_builder():\n",
-    "    model = keras.models.Sequential()\n",
-    "    model.add(keras.layers.Conv2D(32, kernel_size=(3, 3), padding='same', activation='relu', strides=1, input_shape=(28, 28, 1)))\n",
-    "    model.add(keras.layers.MaxPooling2D(pool_size=2, strides=2, padding='valid'))\n",
-    "    model.add(keras.layers.Dropout(0.4))\n",
-    "    model.add(keras.layers.Conv2D(32, kernel_size=(3, 3), padding='same', activation='relu', strides=1))\n",
-    "    model.add(keras.layers.MaxPooling2D(pool_size=2, strides=2, padding='valid'))\n",
-    "    model.add(keras.layers.Dropout(0.3))\n",
-    "    model.add(keras.layers.Flatten())\n",
-    "    model.add(keras.layers.Dense(128, activation='relu'))\n",
-    "    model.add(keras.layers.Dropout(0.1))\n",
-    "    model.add(keras.layers.Dense(64, activation='relu'))\n",
-    "    model.add(keras.layers.Dense(10, activation='softmax'))\n",
+    "    model = tf.keras.models.Sequential()\n",
+    "    model.add(tf.keras.layers.Conv2D(32, kernel_size=(3, 3), padding='same', activation='relu', strides=1, input_shape=(28, 28, 1)))\n",
+    "    model.add(tf.keras.layers.MaxPooling2D(pool_size=2, strides=2, padding='valid'))\n",
+    "    model.add(tf.keras.layers.Dropout(0.4))\n",
+    "    model.add(tf.keras.layers.Conv2D(32, kernel_size=(3, 3), padding='same', activation='relu', strides=1))\n",
+    "    model.add(tf.keras.layers.MaxPooling2D(pool_size=2, strides=2, padding='valid'))\n",
+    "    model.add(tf.keras.layers.Dropout(0.3))\n",
+    "    model.add(tf.keras.layers.Flatten())\n",
+    "    model.add(tf.keras.layers.Dense(128, activation='relu'))\n",
+    "    model.add(tf.keras.layers.Dropout(0.1))\n",
+    "    model.add(tf.keras.layers.Dense(64, activation='relu'))\n",
+    "    model.add(tf.keras.layers.Dense(10, activation='softmax'))\n",
     "\n",
     "    model.compile(optimizer=\"rmsprop\", loss=\"categorical_crossentropy\", metrics=[\"accuracy\"])\n",
     "    \n",
@@ -69,7 +69,7 @@
    "source": [
     "#Read data\n",
     "database = shfl.data_base.Emnist()\n",
-    "train_data, train_labels, val_data, val_labels, test_data, test_labels = database.load_data()\n",
+    "train_data, train_labels, test_data, test_labels = database.load_data()\n",
     "\n",
     "#Distribute among clients\n",
     "non_iid_distribution = shfl.data_distribution.NonIidDataDistribution(database)\n",
@@ -196,7 +196,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   },
   "pycharm": {
    "stem_cell": {
