--- a/notebooks/federated_models_regression_deeplearning.ipynb
+++ b/notebooks/federated_models_regression_deeplearning.ipynb
@@ -76,13 +76,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import keras\n",
+    "import tensorflow as tf\n",
     "\n",
     "def model_builder():\n",
     "    # create model\n",
-    "    model = keras.models.Sequential()\n",
-    "    model.add(keras.layers.Dense(8, input_dim=8, kernel_initializer='normal', activation='relu'))\n",
-    "    model.add(keras.layers.Dense(1, kernel_initializer='normal'))\n",
+    "    model = tf.keras.models.Sequential()\n",
+    "    model.add(tf.keras.layers.Dense(8, input_dim=8, kernel_initializer='normal', activation='relu'))\n",
+    "    model.add(tf.keras.layers.Dense(1, kernel_initializer='normal'))\n",
     "    \n",
     "    # Compile model\n",
     "    model.compile(loss='mean_squared_error', optimizer='adam', metrics=[\"mae\"])\n",
