--- a/notebooks/basic_concepts_tensorflow.ipynb
+++ b/notebooks/basic_concepts_tensorflow.ipynb
@@ -125,9 +125,15 @@
     "        Bias from the layer\n",
     "    \"\"\"\n",
     "\n",
-    "    def __init__(self, units=32):\n",
-    "        super(CustomDense, self).__init__()\n",
+    "    def __init__(self, units=32, **kwargs):\n",
+    "        super(CustomDense, self).__init__(**kwargs)\n",
     "        self._units = units\n",
+    "        \n",
+    "    def get_config(self):\n",
+    "        config = {'units': self._units}\n",
+    "        base_config = super(CustomDense, self).get_config()\n",
+    "\n",
+    "        return dict(list(base_config.items()) + list(config.items()))\n",
     "\n",
     "    def build(self, input_shape):\n",
     "        \"\"\"\n",
@@ -249,6 +255,13 @@
     "test_data = test_data.astype(np.float32)\n",
     "federated_government.run_rounds(3, test_data, test_label)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
