--- a/notebooks/differential_privacy_composition_concepts.ipynb
+++ b/notebooks/differential_privacy_composition_concepts.ipynb
@@ -419,9 +419,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Sherpa_venvPy3",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "sherpa_venvpy3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -433,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
