added introduction to DP section

--- a/notebooks/federated_clustering_k_means.ipynb
+++ b/notebooks/federated_clustering_k_means.ipynb
@@ -161,6 +161,8 @@
    "source": [
     "**Differentially Private version**\n",
     "\n",
+    "To preserve the privacy of the clients, in this section we introduce Differential Privacy (DP) in our model. Firstly we calibrate the noise introduced by the differentially private mechanism using the test data, then we apply DP to each client feature, so that each cluster computed by a client is shared with the main server privately, that is, without disclosing client's identity.\n",
+    "\n",
     "In the case of applying the Laplace privacy mechanism , the noise added has to be of the order of the sensitivity of the model's output, i.e. the coordinates of each cluster.\n",
     "\n",
     "In the general case, the model's sensitivity might be difficult to compute analytically. \n",
