Notebooks changed. Test passed

--- a/notebooks/federated_models_regression_linear.ipynb
+++ b/notebooks/federated_models_regression_linear.ipynb
@@ -171,7 +171,7 @@
     "\n",
     "# Run the algorithm:\n",
     "aggregator = shfl.federated_aggregator.FedAvgAggregator()\n",
-    "federated_government = shfl.learning_approach.FederatedGovernment(LinearRegression2D, federated_data, aggregator)\n",
+    "federated_government = shfl.federated_government.FederatedGovernment(LinearRegression2D, federated_data, aggregator)\n",
     "\n",
     "federated_government.run_rounds(n = 1, test_data = test_data, test_label = test_label)"
    ]
@@ -301,6 +301,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
