--- a/notebooks/high_level_federated_image_classification.ipynb
+++ b/notebooks/high_level_federated_image_classification.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "Finally, as FL modelwe use a CNN-based neural network architecture based on two CNN layers and FedAvg as aggregation operator (see [Federated Aggregation Operators](./basic_concepts_aggregation_operators.ipynb)).\n",
     "\n",
-    "For more information about how to change some parameters or implementation details visit [federated_images_classifier.py](../shfl/learning_approach/federated_images_classifier.py)."
+    "For more information about how to change some parameters or implementation details visit [federated_images_classifier.py](../shfl/federated_government/federated_images_classifier.py)."
    ]
   },
   {
@@ -45,7 +45,7 @@
    "source": [
     "import shfl\n",
     "\n",
-    "classifier = shfl.learning_approach.FederatedImagesClassifier('EMNIST')\n",
+    "classifier = shfl.federated_government.FederatedImagesClassifier('EMNIST')\n",
     "classifier.run_rounds()"
    ]
   }
@@ -71,10 +71,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
