--- a/notebooks/basic_concepts_random_seed.ipynb
+++ b/notebooks/basic_concepts_random_seed.ipynb
@@ -185,7 +185,7 @@
    "outputs": [],
    "source": [
     "aggregator = shfl.federated_aggregator.FedAvgAggregator()\n",
-    "federated_government = shfl.learning_approach.FederatedGovernment(model_builder, federated_data, aggregator)"
+    "federated_government = shfl.federated_government.FederatedGovernment(model_builder, federated_data, aggregator)"
    ]
   },
   {
@@ -300,10 +300,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
