--- a/notebooks/evaluation_methodology.ipynb
+++ b/notebooks/evaluation_methodology.ipynb
@@ -77,7 +77,7 @@
     "\n",
     "#Set up aggregation operator\n",
     "aggregator = shfl.federated_aggregator.FedAvgAggregator()\n",
-    "federated_government = shfl.learning_approach.FederatedGovernment(model_builder, federated_data, aggregator)\n",
+    "federated_government = shfl.federated_government.FederatedGovernment(model_builder, federated_data, aggregator)\n",
     "\n",
     "#Reshape and normalize\n",
     "shfl.private.federated_operation.apply_federated_transformation(federated_data, Reshape())\n",
@@ -164,7 +164,7 @@
    "outputs": [],
    "source": [
     "#We restart federated goverment\n",
-    "federated_government = shfl.learning_approach.FederatedGovernment(model_builder, federated_data, aggregator)\n",
+    "federated_government = shfl.federated_government.FederatedGovernment(model_builder, federated_data, aggregator)\n",
     "\n",
     "test_data = np.reshape(test_data, (test_data.shape[0], test_data.shape[1], test_data.shape[2],1))\n",
     "federated_government.run_rounds(1, test_data, test_labels)"
@@ -201,10 +201,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
