--- a/notebooks/federated_clustering_k_means.ipynb
+++ b/notebooks/federated_clustering_k_means.ipynb
@@ -273,7 +273,7 @@
     }
    ],
    "source": [
-    "from shfl.learning_approach.federated_government import FederatedGovernment\n",
+    "from shfl.federated_government.federated_government import FederatedGovernment\n",
     "\n",
     "n_clusters = 3 # Set number of clusters\n",
     "n_features = train_data.shape[1]\n",
@@ -657,6 +657,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
