--- a/notebooks/federated_models_regression_deeplearning.ipynb
+++ b/notebooks/federated_models_regression_deeplearning.ipynb
@@ -104,7 +104,7 @@
    "outputs": [],
    "source": [
     "aggregator = shfl.federated_aggregator.FedAvgAggregator()\n",
-    "federated_government = shfl.learning_approach.FederatedGovernment(model_builder, federated_data, aggregator)"
+    "federated_government = shfl.federated_government.FederatedGovernment(model_builder, federated_data, aggregator)"
    ]
   },
   {
@@ -172,6 +172,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
