--- a/notebooks/federated_clustering_k_means.ipynb
+++ b/notebooks/federated_clustering_k_means.ipynb
@@ -336,7 +336,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see when we add DP to the model it becomes quite unstable (multiple executions each one with very different results) and almost useless (even with unacceptable values for $\\delta$, that is $\\delta \\geq 0.5$, the results are quite bad), which suggest that another way of adding DP have to be provided."
+    "As you can see when we add DP to the model it becomes quite unstable (multiple executions each one with very different results) and almost useless (even with unacceptable values for $\\delta$, that is $\\delta \\geq 0.5$, the results are quite bad), which suggest that another way of adding DP have to be provided. An alternative approach for adding DP can be found in [A differential privacy protecting K-means clustering algorithm based on contour coefficients](https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0206832), but still it is unclear how to implement a"
    ]
   },
   {
